compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_private_type_leak_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 761
expression: "type PrivateType\n\n@external(erlang, \"a\", \"b\")\npub fn leak_type() -> PrivateType\n"
---
error: Private type used in public interface
  ┌─ /src/one/two.gleam:4:1
  │
4 │ pub fn leak_type() -> PrivateType
  │ ^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.

